<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrou"
    android:orientation="vertical" >

    <TextView
        android1:id="@+id/meddetails"
        android1:layout_width="75sp"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/educat"
        android1:layout_alignTop="@+id/medicinedetails"
        android1:text="@string/meddet"
        android1:textColor="#ffffff" />

    <Button
        android1:id="@+id/next2"
        android1:layout_width="70sp"
          style="?android:attr/buttonStyleSmall"
        android1:layout_height="40sp"
        android1:layout_alignBaseline="@+id/clear"
        android1:layout_alignBottom="@+id/clear"
        android1:layout_marginLeft="26dp"
        android1:layout_toRightOf="@+id/clear"
        android1:background="@drawable/buttonback"
        android1:text="@string/next2"
        android1:textColor="#ffffff" />

    <TextView
        android1:id="@+id/educat"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:layout_marginLeft="28dp"
        android1:layout_marginTop="184dp"
        android1:text="@string/education"
        android1:textColor="#ffffff" />

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignTop="@+id/selgen"
        android1:layout_marginLeft="43dp"
        android1:layout_toRightOf="@+id/selgen" >

        <RadioButton
            android1:id="@+id/male"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:button="@drawable/custom_radiobutton"
            android1:checked="true"
            android1:text="@string/male"
            android1:textColor="#ffffff" />

        <RadioButton
            android1:id="@+id/female"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:button="@drawable/custom_radiobutton"
            android1:text="@string/female"
            android1:textColor="#ffffff" />
    </RadioGroup>

    <TextView
        android1:id="@+id/age"
        android1:layout_width="30sp"
        android1:layout_height="wrap_content"
        android1:layout_alignRight="@+id/cityname"
        android1:layout_below="@+id/radioGroup1"
        android1:layout_marginTop="19dp"
        android1:text="@string/age"
        android1:textColor="#ffffff" />

    <TextView
        android1:id="@+id/cityname"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignRight="@+id/educat"
        android1:layout_alignTop="@+id/city"
        android1:text="@string/city"
        android1:textColor="#ffffff" />

    <Spinner
        android1:id="@+id/eduspin"
        android1:layout_width="150sp"
        android1:layout_height="30sp"
        android1:layout_alignLeft="@+id/city"
        android1:layout_alignTop="@+id/educat"
        android1:background="@drawable/edittext" />

    <EditText
        android1:id="@+id/medicinedetails"
        android1:layout_width="150sp"
        android1:layout_height="100sp"
        android1:layout_alignLeft="@+id/eduspin"
        android1:layout_below="@+id/eduspin"
        android1:layout_marginTop="19dp"
        android1:background="@drawable/edittext"
        android1:ems="10"
        android1:gravity="top"
        android1:hint="@string/medihint"
        android1:inputType="textMultiLine" />

    <Button
        android1:id="@+id/clear"
        style="?android:attr/buttonStyleSmall"
        android1:layout_width="70sp"
        android1:layout_height="40sp"
        android1:layout_alignBaseline="@+id/cancel"
        android1:layout_alignBottom="@+id/cancel"
        android1:layout_centerHorizontal="true"
        android1:background="@drawable/buttonback"
        android1:text="@string/reset"
        android1:textColor="#ffffff" />

    <TextView
        android1:id="@+id/selgen"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentTop="true"
        android1:layout_alignRight="@+id/age"
        android1:layout_marginTop="28dp"
        android1:text="@string/gen"
        android1:textColor="#ffffff" />

    <EditText
        android1:id="@+id/city"
        android1:layout_width="150sp"
        android1:layout_height="30dp"
        android1:layout_above="@+id/eduspin"
        android1:layout_alignLeft="@+id/radioGroup1"
        android1:layout_marginBottom="16dp"
        android1:background="@drawable/edittext"
        android1:ems="10"
        android1:hint="@string/cityhint"
        android1:inputType="number"
        android1:maxLength="5" >

        <requestFocus />
    </EditText>

    <Spinner
        android1:id="@+id/selage"
        android1:layout_width="150sp"
        android1:layout_height="30sp"
        android1:layout_alignLeft="@+id/radioGroup1"
        android1:layout_alignTop="@+id/age"
        android1:background="@drawable/edittext" />

    <Button
        android1:id="@+id/cancel"
        style="?android:attr/buttonStyleSmall"
        android1:layout_width="70sp"
        android1:layout_height="40sp"
        android1:layout_alignLeft="@+id/meddetails"
        android1:layout_alignParentBottom="true"
        android1:layout_marginBottom="42dp"
        android1:background="@drawable/buttonback"
        android1:text="Cancel"
        android1:textColor="#ffffff" />

</RelativeLayout>