<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/backgrou">

        <TextView
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timer3"
            android:layout_alignLeft="@+id/time1"
            android:layout_marginBottom="28dp"
            android:text="@string/time2"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/meridian2"
            android:layout_width="50sp"
            android:layout_height="25sp"
            android:layout_alignLeft="@+id/meridian1"
            android:layout_alignTop="@+id/timer2"
            
            android:background="@drawable/edittext" />

        <Spinner
            android:id="@+id/meridian3"
            android:layout_width="50sp"
            android:layout_height="25sp"
            android:layout_alignLeft="@+id/meridian2"
            android:layout_alignTop="@+id/timer3"
            android:background="@drawable/edittext" />

        <Button
            android:id="@+id/submit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70sp"
            android:layout_height="40sp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/group"
            android:layout_marginBottom="39dp"
            android:background="@drawable/buttonback"
            android:text="@string/submit"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70sp"
            android:layout_height="40sp"
            android:layout_alignBaseline="@+id/submit"
            android:layout_alignBottom="@+id/submit"
            android:layout_toRightOf="@+id/time3"
            android:background="@drawable/buttonback"
            android:text="@string/cancel"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/timer2"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_alignLeft="@+id/timer1"
            android:layout_alignTop="@+id/time2"
            android:background="@drawable/edittext" />

        <Spinner
            android:id="@+id/prospin"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/cancel"
            android:background="@drawable/edittext" />

        <TextView
            android:id="@+id/preftime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timer1"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="27dp"
            android:text="@string/pretime"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/time2"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="14dp"
            android:text="@string/time1"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/time3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/prospin"
            android:layout_alignLeft="@+id/time2"
            android:layout_marginBottom="28dp"
            android:text="@string/time3"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/meridian1"
            android:layout_width="50sp"
            android:layout_height="25sp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/timer1"
            android:layout_marginRight="19dp"
            android:background="@drawable/edittext" />

        <Spinner
            android:id="@+id/timer1"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_alignTop="@+id/time1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittext" />

        <Spinner
            android:id="@+id/timer3"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_alignLeft="@+id/timer2"
            android:layout_alignTop="@+id/time3"
            android:background="@drawable/edittext" />

        <TextView
            android:id="@+id/prolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/preftime"
            android:layout_below="@+id/time3"
            android:text="@string/proname"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/progroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/prolist"
            android:layout_below="@+id/prospin"
            android:layout_marginTop="17dp"
            android:text="@string/progroup"
            android:textColor="#ffffff" />

        <com.example.sms.MultiSelectionSpinner
            android:id="@+id/group"
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:layout_alignLeft="@+id/prospin"
            android:layout_below="@+id/progroup"
            android:layout_marginTop="17dp"
            android:background="@drawable/edittext"
            android:prompt="@string/selectgroup" />

</RelativeLayout>
