<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrou"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sideeff"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
       android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:textSize="17dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android1:id="@+id/next"
        style="?android:attr/buttonStyleSmall"
        android1:layout_width="70sp"
        android1:layout_height="40sp"
        android1:layout_below="@+id/selecty"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="74dp"
        android1:background="@drawable/buttonback"
        android1:text="@string/next2"
        android1:textColor="#ffffff" />

    <RadioGroup
        android1:id="@+id/selecty"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/sideeff"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="137dp" >

        <RadioButton
            android1:id="@+id/yesans"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:button="@drawable/custom_radiobutton"
            android1:text="@string/yes"
            android:textSize="17dp"
            android1:textColor="#ffffff" />

        <RadioButton
            android1:id="@+id/noans"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:button="@drawable/custom_radiobutton"
            android1:text="@string/no"
            android:textSize="17dp"
            android1:textColor="#ffffff" />
    </RadioGroup>

</RelativeLayout>