<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrou"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/othr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:text="@string/other"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/play"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="40sp"
        android:layout_above="@+id/butnext"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="37dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/xxpl"
        android:onClick="playAudio"
       
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/butnext"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_toRightOf="@+id/othr"
        android:background="@drawable/buttonback"
        android:text="@string/next2"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/reason"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sometext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="top"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/stop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="40sp"
        android:layout_alignBaseline="@+id/play"
        android:layout_alignBottom="@+id/play"
        android:layout_toRightOf="@+id/othr"
        android:background="@drawable/stop_button"
        android:onClick="stopClicked"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/audiooptions"
        android:layout_width="90sp"
        android:layout_height="20sp"
        android:layout_alignRight="@+id/reason"
        android:layout_alignTop="@+id/voice"
        android:layout_marginTop="21dp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="40sp"
        android:layout_alignBaseline="@+id/stop"
        android:layout_alignBottom="@+id/stop"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="42dp"
        android:background="@drawable/record"
        android:onClick="recordAudio"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop"
        android:layout_marginBottom="44dp"
        android:layout_toLeftOf="@+id/audiooptions"
        android:text="@string/rec"
        android:textColor="#ffffff"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/sometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/othr"
        android:layout_marginTop="29dp"
        android:text="@string/sometext"
        android:textColor="#ffffff"
        android:textSize="17dp" />

</RelativeLayout>